Closed
Bug 1618708
Opened 6 years ago
Closed 6 years ago
VoiceOver does not speak value changes in slider
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla76
Tracking | Status | |
---|---|---|
firefox76 | --- | verified |
People
(Reporter: eeejay, Assigned: morgan)
Details
(Whiteboard: [mac2020_1])
Attachments
(1 file)
STR:
- Load
data:text/html,<input id="skill" name="skill" type="range" min="1" max="100" value="0">
- Navigate to slider
- Enter interaction group
- Arrow right to increase slider value
Expected:
VoiceOver should announce the new slider values
Actual:
Nothing audible is heard
Note:
- In safari you don't need to enter the slider's interaction group, but can just arrow when the cursor is on it.
Reporter | ||
Updated•6 years ago
|
Assignee: nobody → mreschenberg
Assignee | ||
Updated•6 years ago
|
Priority: P2 → P1
Assignee | ||
Comment 1•6 years ago
|
||
Assignee | ||
Comment 2•6 years ago
|
||
Verified that this responds to step size, and seems to treat step="0" as step="1". Actions show up in the a11y inspector actions menu :)
Pushed by mreschenberg@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4040b1b35d78
Implement slider class and support required actions, valueDidChange event handling. r=eeejay
![]() |
||
Comment 4•6 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox76:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
Updated•6 years ago
|
Flags: qe-verify+
Comment 5•6 years ago
|
||
Confirmed that interacting with the slider using an old Nightly (2020-02-27) no audible is heard. Verified that using latest Firefox beta 76.0b4, moving the slider left and right is announced by VoiceOver along with the values of the slider.
You need to log in
before you can comment on or make changes to this bug.
Description
•