Bug 1618708: Implement slider class and support required actions, valueDidChange event handling. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D66667